forEnersys/nthing Salesforce CPQ/objects/ConfigurationAttribute__c.object
<CustomObject>
    <customHelpPage>ConfigurationAttributeHelp</customHelpPage>
    <description>Product configuration attribute.</description>
    <fields>
        <fullName>AppliedImmediately__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates changes to this configuration attribute should apply immediately.</description>
        <inlineHelpText>Select the checkbox to immediately apply changes to this option. Use sparingly to avoid slow user experience.</inlineHelpText>
        <label>Apply Immediately</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApplyToProductOptions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Apply configuration attribute selection to product options.</description>
        <inlineHelpText>Select the checkbox to apply configuration attribute selection to product options.</inlineHelpText>
        <label>Apply To Product Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutoSelect__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set the value of this attribute when adding a product from a Dynamic Feature using the value of the added product&apos;s matching field.</description>
        <inlineHelpText>Set the value of this attribute when adding a product using the value in the product&apos;s matching field.</inlineHelpText>
        <label>Auto-Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ColumnOrder__c</fullName>
        <description>Columns are comprised of a picklist (of 1, 2, or 3) for each Configuration Attribute. A maximum of 3 columns is allowed.</description>
        <inlineHelpText>Columns are comprised of a picklist (of 1, 2, or 3) for each Configuration Attribute. A maximum of 3 columns is allowed.</inlineHelpText>
        <label>Column Order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DisplayOrder__c</fullName>
        <description>This is the order in which the Configuration Attributes will be displayed.</description>
        <inlineHelpText>If there is no display order associated with a Configuration Attribute, order is determined by Related Content name.</inlineHelpText>
        <label>Row Order</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Feature in which this attribute should be rendered.</description>
        <inlineHelpText>Specify the feature in which this attribute should be entered.</inlineHelpText>
        <label>Feature</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Product__c</field>
                <operation>equals</operation>
                <valueField>ProductFeature__c.ConfiguredSKU__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ProductFeature__c</referenceTo>
        <relationshipLabel>Configuration Attributes</relationshipLabel>
        <relationshipName>ConfigurationAttributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HiddenValues__c</fullName>
        <description>Values from the backing picklist field that should be hidden on this bundle.</description>
        <inlineHelpText>Enter values from the corresponding picklist field on Product Option object that you want to be hidden on this bundle.</inlineHelpText>
        <label>Hidden Values</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If flagged as hidden, the Configuration Attribute will not appear on the Product Configurator Page.</description>
        <inlineHelpText>If flagged as hidden, the Configuration Attribute will not appear on the Product Configurator Page.</inlineHelpText>
        <label>Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <description>Position of the attribute.</description>
        <inlineHelpText>Specify position of this attribute. Top renders above the options. Bottom renders below.</inlineHelpText>
        <label>Position</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Top</fullName>
                    <default>true</default>
                    <label>Top</label>
                </value>
                <value>
                    <fullName>Bottom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product being configured.</description>
        <inlineHelpText>Specify product on which you are creating the attribute.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Configuration Attributes</relationshipLabel>
        <relationshipName>ConfigurationAttributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the attributes requires a value.</description>
        <inlineHelpText>Specify whether this attribute requires a value.</inlineHelpText>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShownValues__c</fullName>
        <description>Values from the backing picklist field that should be shown on this bundle.</description>
        <inlineHelpText>Enter values from the corresponding picklist field on Product Option object that you want to be shown on this bundle.</inlineHelpText>
        <label>Shown Values</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TargetField__c</fullName>
        <description>Field on the Product Option that sources remaining metadata and holds the value.</description>
        <inlineHelpText>Specify field on Product Option that will hold this attribute&apos;s value.</inlineHelpText>
        <label>Target Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unit Price</fullName>
                </value>
                <value>
                    <fullName>Discount (Amt)</fullName>
                </value>
                <value>
                    <fullName>Discount (%)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Configuration Attribute</label>
    <nameField>
        <label>Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuration Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Column_Order_is_required</fullName>
        <active>true</active>
        <description>Column Order is required</description>
        <errorConditionFormula>if (Text( ColumnOrder__c ) == &apos;&apos;, true, false)</errorConditionFormula>
        <errorMessage>Column Order is required.</errorMessage>
    </validationRules>
</CustomObject>